--- a/src/scss/pages/_userPanel.scss
+++ b/src/scss/pages/_userPanel.scss
@@ -6,7 +6,7 @@
   max-width:100%;
   display: flex;
   flex-wrap: wrap;
-  background-image: url("https://t3.ftcdn.net/jpg/01/96/83/20/360_F_196832044_ISa3G24W2dmiW5X94hJq59Cs8uHat8I1.jpg");
+
   overflow: auto;
 
 
@@ -19,8 +19,8 @@
   border-radius: 5px;
   font-size: 36px;
   opacity: 1;
-  background-color: red;
-  color: white;
+
+  color: black;
   display: flex;
   justify-content: center;
   align-items: center;
