--- a/src/scss/pages/_dogCv.scss
+++ b/src/scss/pages/_dogCv.scss
@@ -2,27 +2,24 @@
   font-family: cursive;
 }
 
-
 .container-main {
   max-width:100%;
   display: flex;
   flex-wrap: wrap;
 
-
-
 }
-
 
 .dogCvHeader {
   z-index: 99999999;
   width: 100%;
   height: 5rem;
-  border: 20px dashed black;
+  display: flex;
+  justify-content: space-between;
   border-radius: 5px;
   font-size: 36px;
   opacity: 1;
-  background-color: red;
-  color: red;
+
+  color: black;
   display: flex;
 
   align-items: center;
@@ -34,7 +31,7 @@
 .aside {
   width: 20vh;
   height: 85vh;
-  background-color: red;
+  color: black;
   display: flex;
   flex-direction: column;
 }
@@ -48,18 +45,18 @@
 .aside-content:hover {
   transition: width 0.3s ease-in-out, height 0.3s ease-in-out; /* Dodane */
   padding: 2rem; /* Dodane, jeśli chcesz zachować padding po powiększeniu */
-  background-color: white;
+
   font-size: 32px;
 }
 .dogCv {
-  background-color: green;
+
   width: 175vh;
   display: flex;
 }
 .dogCvAside {
   width: 35vh;
   height: 81vh;
-  background-color: yellow;
+
   display: flex;
 
   margin: 1rem;
@@ -72,7 +69,7 @@
   align-content: center;
 }
 .dogCvMainContentHeader {
-  background-color: blue;
+
   width: 95%;
   margin: 1rem;
   display: flex;
