--- a/src/scss/pages/_userPanel.scss
+++ b/src/scss/pages/_userPanel.scss
@@ -7,7 +7,8 @@
   display: flex;
   flex-wrap: wrap;
 
-  overflow: auto;
+
+
 
 
 }
@@ -15,7 +16,7 @@
   z-index: 99999999;
   width: 100%;
   height: 5rem;
-  border: 20px dashed black;
+
   border-radius: 5px;
   font-size: 36px;
   opacity: 1;
@@ -32,7 +33,7 @@
 .aside {
   width: 20vh;
   height: 85vh;
-  background-color: red;
+
   display: flex;
   flex-direction: column;
 }
@@ -44,10 +45,11 @@
 }
 
 .aside-content:hover {
-  transition: width 0.3s ease-in-out, height 0.3s ease-in-out; /* Dodane */
-  padding: 2rem; /* Dodane, jeśli chcesz zachować padding po powiększeniu */
-  background-color: white;
-  font-size: 32px;
+  transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
+  padding: 1rem; /* Dodane, jeśli chcesz zachować padding po powiększeniu */
+  background-color: lightcoral;
+  font-size: 23px;
+
 }
 
 
@@ -70,8 +72,8 @@
 }
 
 .userPanelDogCards:hover {
-  width: 330px;
-  height: 330px;
+  width: 300px;
+  height: 300px;
   box-shadow: 5px 5px 5px 10px lightcoral;
 }
 
@@ -93,6 +95,6 @@ p {
   align-items: center;
 
 
-
-
 }
+
+
