--- a/src/js/pages/_userPanel.scss
+++ b/src/js/pages/_userPanel.scss
@@ -10,9 +10,8 @@
 
 
 
-
 }
-.dogCvHeader {
+.userPanelHeader {
   z-index: 9999999;
   width: 100%;
   height: 5rem;
@@ -21,28 +20,32 @@
   opacity: 1;
   color: black;
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
-.dogCvHeader:focus {
+.userPanelHeader:focus {
  outline: none;
 }
 
-.aside {
-  width: 20vh;
-  height: 85vh;
-
+.userNameAside {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-evenly;
 }
 
-.aside-content {
+.userNameAside-content {
   font-size: 16px;
   padding: 1rem;
-  transition: width 0.3s ease-in-out, height 0.3s ease-in-out; /* Dodane */
+  transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
+
+
+  background-color: blue;
+  justify-content: space-between;
 }
 
-.aside-content:hover {
+.userNameAside-content:hover {
   transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
   padding: 1rem; /* Dodane, jeśli chcesz zachować padding po powiększeniu */
   background-color: lightcoral;
@@ -94,5 +97,4 @@ p {
 
 
 }
-
 
