--- a/src/js/pages/_calculator.scss
+++ b/src/js/pages/_calculator.scss
@@ -12,7 +12,7 @@
 
 
 }
-.dogCvHeader {
+.calculatorHeader {
   z-index: 99;
   width: 100%;
   height: 5rem;
@@ -25,11 +25,11 @@
   justify-content: center;
   align-items: center;
 }
-.dogCvHeader:focus {
+.calculatorHeader:focus {
   outline: none;
 }
 
-.aside {
+.asideCalculator {
   width: 20vh;
   height: 85vh;
 
@@ -37,13 +37,13 @@
   flex-direction: column;
 }
 
-.aside-content {
+.asideCalculator-content {
   font-size: 16px;
   padding: 1rem;
   transition: width 0.3s ease-in-out, height 0.3s ease-in-out; /* Dodane */
 }
 
-.aside-content:hover {
+.asideCalculator-content:hover {
   transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
   padding: 1rem; /* Dodane, jeśli chcesz zachować padding po powiększeniu */
   background-color: lightcoral;
