--- a/src/js/pages/_dogCalendar.scss
+++ b/src/js/pages/_dogCalendar.scss
@@ -10,7 +10,7 @@
 
 }
 
-.dogCvHeader {
+.dogCalendarHeader {
   z-index: 99999999;
   width: 100%;
   height: 5rem;
@@ -30,7 +30,7 @@
   outline: none;
 }
 
-.aside {
+.asideDogCalendar {
   width: 20vh;
   height: 85vh;
   color: black;
@@ -38,13 +38,13 @@
   flex-direction: column;
 }
 
-.aside-content {
+.asideDogCalendar-content {
   font-size: 16px;
   padding: 1rem;
   transition: width 0.3s ease-in-out, height 0.3s ease-in-out; /* Dodane */
 }
 
-.aside-content:hover {
+.asideDogCalendar-content:hover {
   transition: width 0.3s ease-in-out, height 0.3s ease-in-out; /* Dodane */
   padding: 2rem; /* Dodane, jeśli chcesz zachować padding po powiększeniu */
 
