--- a/src/js/pages/_reservedDogs.scss
+++ b/src/js/pages/_reservedDogs.scss
@@ -12,7 +12,7 @@
 
 
 }
-.dogCvHeader {
+.reservedDogsHeader {
   z-index: 99999;
   width: 100%;
   height: 5rem;
@@ -29,7 +29,7 @@
   outline: none;
 }
 
-.aside {
+.asideReservedDogs {
   width: 20vh;
   height: 85vh;
 
@@ -37,13 +37,13 @@
   flex-direction: column;
 }
 
-.aside-content {
+.asideReservedDogs-content {
   font-size: 16px;
   padding: 1rem;
   transition: width 0.3s ease-in-out, height 0.3s ease-in-out; /* Dodane */
 }
 
-.aside-content:hover {
+.asideReservedDogs-content:hover {
   transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
   padding: 1rem; /* Dodane, jeśli chcesz zachować padding po powiększeniu */
   background-color: lightcoral;
