--- a/src/js/pages/_weather.scss
+++ b/src/js/pages/_weather.scss
@@ -12,7 +12,7 @@
 
 
 }
-.dogCvHeader {
+.weatherHeader {
   z-index: 9999;
   width: 100%;
   height: 5rem;
@@ -28,7 +28,7 @@
   outline: none;
 }
 
-.aside {
+.asideWeather {
   width: 20vh;
   height: 85vh;
 
@@ -36,13 +36,13 @@
   flex-direction: column;
 }
 
-.aside-content {
+.asideWeather-content {
   font-size: 16px;
   padding: 1rem;
   transition: width 0.3s ease-in-out, height 0.3s ease-in-out; /* Dodane */
 }
 
-.aside-content:hover {
+.asideWeather-content:hover {
   transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
   padding: 1rem; /* Dodane, jeśli chcesz zachować padding po powiększeniu */
   background-color: lightcoral;
