--- a/src/js/pages/_dogCalendar.scss
+++ b/src/js/pages/_dogCalendar.scss
@@ -2,12 +2,10 @@
   font-family: cursive;
 }
 
-.container-main {
-  max-width:100%;
+.container-main-dogCalendar {
+  max-width: 100%;
   display: flex;
   flex-wrap: wrap;
-
-
 }
 
 .dogCalendarHeader {
@@ -15,67 +13,133 @@
   width: 100%;
   height: 5rem;
   display: flex;
-
   justify-content: center;
   border-radius: 5px;
-  font-size: 36px;
+  font-size: 3rem; /* Użyj jednostek elastycznych dla czcionki */
   opacity: 1;
-
   color: black;
-
-
   align-items: center;
 }
-.dogCvHeader:focus {
+
+.dogCalendarHeader:focus {
   outline: none;
 }
 
 .asideDogCalendar {
-  width: 20vh;
-  height: 85vh;
+  width: 20%; /* Użyj procentowej szerokości dla aside */
+  max-width: 20vh; /* Ustaw maksymalną szerokość */
+
   color: black;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  align-self: flex-start; /* Elementy .asideDogCalendar są wyświetlane z lewej strony */
 }
 
 .asideDogCalendar-content {
-  font-size: 16px;
+
   padding: 1rem;
-  transition: width 0.3s ease-in-out, height 0.3s ease-in-out; /* Dodane */
+  transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
+  justify-content: space-between;
+  flex: 1 1 auto;
+  text-align: center;
+  margin: 0.5rem;
 }
 
 .asideDogCalendar-content:hover {
-  transition: width 0.3s ease-in-out, height 0.3s ease-in-out; /* Dodane */
-  padding: 2rem; /* Dodane, jeśli chcesz zachować padding po powiększeniu */
-
-  font-size: 20px;
+  background-color: red;
 }
-.dogCalendar {
 
-  width: 85%;
+.dogCalendar {
+  width: 80%; /* Użyj procentowej szerokości dla kalendarza */
   margin: 0.5rem;
   display: flex;
   flex-direction: column;
-
 }
+
 .dogCalendarDate {
   display: flex;
   justify-content: center;
 }
 
 .dogCalendarWeek {
-
   flex-direction: row;
-
 }
+
 .dogCalendarDay {
   margin: 1rem;
-  padding: 4rem;
+  padding: 3rem;
   flex-direction: column;
-
 }
 
 .selected {
   background-color: blue;
   color: white;
+}
+
+/* Media queries */
+@media screen and (max-width: 1200px) {
+  .dogCalendar {
+    justify-content: center;
+  }
+
+  .asideDogCalendar-content {
+    font-size: 2rem;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .dogCalendarHeader {
+    font-size: 2.5rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+  }
+
+  .asideDogCalendar {
+    width: 200px;
+    height: auto;
+  }
+
+  .asideDogCalendar-content {
+    font-size: 2rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+  }
+
+  .asideDogCalendar-content:hover {
+    font-size: 2.5rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .dogCalendarHeader {
+    font-size: 2.5rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+  }
+
+  .asideDogCalendar {
+    width: 100%; /* Dostosuj szerokość aside dla mniejszych ekranów */
+    height: auto;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .asideDogCalendar-content {
+    width: 90%;
+    margin: 0.5rem 0;
+    font-size: 2rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+  }
+
+  .dogCalendar {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .dogCalendarHeader {
+    font-size: 2rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+  }
+
+  .asideDogCalendar-content {
+    font-size: 1.5rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+  }
+
+  .asideDogCalendar-content:hover {
+    font-size: 2rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+  }
 }
