--- a/src/js/pages/_loginPage.scss
+++ b/src/js/pages/_loginPage.scss
@@ -5,87 +5,73 @@
   font-family: cursive;
 }
 
+.container-main-loginPage {
+  flex-direction: column;
+  min-height: 100vh; /* Sprawia, że kontener zajmuje całą wysokość widoku */
 
-
-
-.loginPage {
   background-image: url("https://www.napo.pet/_next/image?url=https%3A%2F%2Fumbraco.napo.pet%2Fmedia%2Fcarj2bm4%2Fdog-cutout-labrador-confetticrown.png&w=3840&q=90&dpl=dpl_DiWWnXGRnzGteuK5GXh6Qzvge1ha");
   background-size: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
 
+}
+
+.loginPage {
 
 
 }
 
 .login-form {
-  width: 30rem;
-
+  width: 100%;
+  max-width: 30rem; /* Maksymalna szerokość formularza */
   color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.7); /* Przezroczyste tło formularza */
+  padding: 2rem;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Cień dla efektu głębi */
 }
 
 .login-form h1 {
-  font-size: 36px;
+  font-size: 2rem; /* Zmniejszenie rozmiaru nagłówka na mniejszych urządzeniach */
   text-align: center;
 }
 
-.login-form .input-box {
-  width: 100%;
-  height: 4rem;
-
-  margin: 3rem 0;
+.input-box {
+  margin: 1.5rem 0; /* Mniejszy margines między polami wejściowymi */
 }
 
 .input-box input {
   width: 100%;
-  height: 100%;
-  background-color: transparent;
-  outline: none;
-  border: 2px solid grey;
-  border-radius: 40px;
-  font-size: 16px;
-  color: black;
-  padding: 20px 45px 20px 20px;
-}
-
-.input-box input::placeholder {
-  color: black;
-}
-
-.input-box i {
-display: flex;
-justify-content: center;
-  align-items: center;
-
-
-  font-size: 20px;
-  color: black;
+  height: 3rem; /* Mniejsza wysokość pola wejściowego */
+  border: none;
+  border-radius: 20px;
+  font-size: 1rem; /* Mniejsza czcionka dla lepszego dopasowania do mniejszych ekranów */
+  padding: 1rem;
+  background-color:     #a4a3a3; /* Przezroczyste tło pola wejściowego */
 }
 
 .login-btn {
   width: 100%;
-  height: 100%;
-  background-color: transparent;
-  outline: none;
-  border: 2px solid grey;
-  border-radius: 40px;
-  font-size: 16px;
+  height: 3rem;
+  border: none;
+  border-radius: 20px;
+  font-size: 1rem;
   color: black;
-  padding: 20px 45px 20px 20px;
-  text-decoration: none;
-
-
+  padding: 1rem;
+  background-color: rgba(255, 255, 255, 0.8);
+  cursor: pointer; /* Kursor zmienia się na wskaźnik na przycisku */
+  text-align: center;
 }
 
 .remember-forgot {
   display: flex;
-  justify-content: center;
+  justify-content: space-between; /* Równomierne rozłożenie elementów */
 }
+
 .login-btn:hover {
-  transition: ease-in 1s;
-  background-color: black;
+  background-color:    #a4a3a3; /* Przejście do ciemniejszego tła po najechaniu kursorem */
 }
 
 a {
@@ -93,7 +79,9 @@ a {
   color: black;
   text-transform: none;
 }
+
 .error {
- display: flex;
+  display: flex;
   justify-content: center;
+  color: red; /* Kolor czerwony dla komunikatów o błędach */
 }
