--- a/src/js/pages/_userPanel.scss
+++ b/src/js/pages/_userPanel.scss
@@ -2,15 +2,15 @@
   font-family: cursive;
 }
 
-.container-main {
-  max-width:100%;
+.container-main-userPanel {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
-
-
-
-
+  flex-direction: row;
+  margin-inline: 0;
+  justify-content: normal;
 }
+
 .userPanelHeader {
   z-index: 9999999;
   width: 100%;
@@ -20,61 +20,55 @@
   opacity: 1;
   color: black;
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
+
 .userPanelHeader:focus {
- outline: none;
+  outline: none;
 }
 
 .userNameAside {
+  width: 20%; /* Szerokość aside */
+
+  max-width: 20vh; /* Maksymalna szerokość */
+  color: black;
   display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: space-evenly;
+  flex-direction: column;
+  justify-content: space-between;
+  align-self: flex-start; /* Elementy .userNameAside są wyświetlane z lewej strony */
 }
 
 .userNameAside-content {
   font-size: 16px;
   padding: 1rem;
   transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
-
-
-  background-color: blue;
   justify-content: space-between;
+  flex: 1 1 auto;
+  text-align: center;
+  margin: 0.5rem;
 }
 
 .userNameAside-content:hover {
-  transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
-  padding: 1rem; /* Dodane, jeśli chcesz zachować padding po powiększeniu */
+
   background-color: lightcoral;
-  font-size: 23px;
-
 }
-
 
 .userPanelMainContent {
-  width: 175vh;
+  width: 80%;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
-
 .userPanelDogCards {
-  margin: 3rem;
-  justify-content: space-evenly;
-
-}
-.userPanelDogCards {
+  margin: 1.5rem;
   width: 300px;
   height: 300px;
   transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
 }
 
 .userPanelDogCards:hover {
-  width: 300px;
-  height: 300px;
   box-shadow: 5px 5px 5px 10px lightcoral;
 }
 
@@ -94,7 +88,118 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-
-
 }
 
+/* Media Queries for responsiveness */
+
+@media (max-width: 1200px) {
+  .userPanelMainContent {
+    justify-content: center;
+  }
+
+  .userPanelDogCards {
+    width: 250px;
+    height: 250px;
+  }
+
+  .userPanelDogCards:hover {
+    width: 250px;
+    height: 250px;
+  }
+}
+
+@media (max-width: 992px) {
+  .userPanelHeader {
+    font-size: 32px;
+  }
+
+  .userPanelDogCards {
+    width: 200px;
+    height: 200px;
+  }
+
+  .userPanelDogCards:hover {
+    width: 200px;
+    height: 200px;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .userPanelDogCards:hover img {
+    width: 110%;
+    height: 110%;
+  }
+}
+
+@media (max-width: 768px) {
+  .userPanelHeader {
+    font-size: 28px;
+  }
+
+  .userNameAside {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .userNameAside-content {
+    width: 90%;
+    margin: 0.5rem 0;
+  }
+
+  .userPanelDogCards {
+    width: 150px;
+    height: 150px;
+  }
+
+  .userPanelDogCards:hover {
+    width: 150px;
+    height: 150px;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .userPanelDogCards:hover img {
+    width: 110%;
+    height: 110%;
+  }
+}
+
+@media (max-width: 576px) {
+  .userPanelHeader {
+    font-size: 24px;
+  }
+
+  .userNameAside-content {
+    font-size: 14px;
+  }
+
+  .userPanelDogCards {
+    width: 100px;
+    height: 100px;
+  }
+
+  .userPanelDogCards:hover {
+    width: 100px;
+    height: 100px;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .userPanelDogCards:hover img {
+    width: 110%;
+    height: 110%;
+  }
+
+  p {
+    font-size: 12px;
+  }
+}
