--- a/src/js/pages/_dogAdoptForm.scss
+++ b/src/js/pages/_dogAdoptForm.scss
@@ -9,117 +9,183 @@
 }
 
 .dogAdoptFormHeader {
-  z-index: 999999;
-
+  z-index: 99;
+  width: 100%;
   height: 5rem;
-  display: flex;
-  justify-content: center;
   border-radius: 5px;
-  font-size: 3rem; /* Użyj jednostek elastycznych dla czcionki */
+  font-size: 36px;
   opacity: 1;
   color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
+  padding: 0 2rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.dogAdoptFormHeader:focus {
-  outline: none;
+.dogAdoptFormHeader .localName {
+  flex-grow: 1;
+  text-align: center;
+}
+
+.dogAdoptFormHeader button {
+  background-color: #ff6666;
+  border: none;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.dogAdoptFormHeader button:hover {
+  background-color: #ff3333;
 }
 
 .asideDogAdoptForm {
-
-
-
+  width: 20%;
+  max-width: 20vh; /* Maksymalna szerokość */
   color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-self: flex-start;
+}
+
+.asideDogAdoptForm-content {
+  font-size: 16px;
+  padding: 1rem;
+
+  text-align: center;
+  margin: 0.5rem 0;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.asideDogAdoptForm-content:hover {
+  background-color: lightcoral;
+}
+
+.dogAdoptionForm {
+  margin: 1rem;
+  width: 70%;
   display: flex;
   flex-direction: column;
 }
 
-.asideDogAdoptForm-content {
-  font-size: 1rem; /* Użyj jednostek elastycznych dla czcionki */
+.dogAdoptionFormSelect,
+.dogAdoptionFormLabel,
+.dogAdoptionFormInput {
   padding: 1rem;
-  transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
 }
 
-.asideDogAdoptForm-content:hover {
-  background-color: red;
+.dogAdoptionFormCheckbox {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 0;
 }
 
-.dogAdoptionForm {
-  width: 60%; /* Użyj procentowej szerokości dla formularza */
-  margin: 1rem;
+.dogAdoptionFormInput {
+  display: flex;
+  flex-direction: column;
+}
+
+.dogAdoptionFormInput label {
+  margin-top: 0.5rem;
+}
+
+.dogAdoptionFormInput input {
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+button {
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 1rem;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  margin-top: 1rem;
+}
+
+
+
+.error {
+  color: red;
+  font-size: 0.9rem;
+  margin-top: 0.5rem;
 }
 
 /* Media Queries for responsiveness */
 @media (max-width: 1200px) {
   .dogAdoptFormHeader {
-    font-size: 2.5rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+    font-size: 32px;
   }
 
   .asideDogAdoptForm {
-    width: 30%; /* Dostosuj szerokość aside dla mniejszych ekranów */
-    max-width: 25vh;
+    width: 25vh;
   }
 }
 
 @media (max-width: 992px) {
   .dogAdoptFormHeader {
-    font-size: 2.2rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+    font-size: 28px;
   }
 
   .asideDogAdoptForm {
-    width: 30%; /* Dostosuj szerokość aside dla mniejszych ekranów */
-    max-width: 30vh;
+    width: 30vh;
+  }
+
+  .dogAdoptionForm {
+    width: 90%;
   }
 
   .asideDogAdoptForm-content {
-    font-size: 1.8rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+    font-size: 14px;
   }
 }
 
 @media (max-width: 768px) {
   .dogAdoptFormHeader {
-    font-size: 2rem; /* Dostosuj czcionkę dla mniejszych ekranów */
-  }
-
-  .container-main {
-    flex-direction: column; /* Ustawianie kontenera na układ kolumnowy dla mniejszych ekranów */
-
+    font-size: 24px;
   }
 
   .asideDogAdoptForm {
-    width: 80%; /* Dostosuj szerokość aside dla mniejszych ekranów */
+    width: 100%;
     height: auto;
-    flex-direction: row; /* Ustawianie aside i formularza na jednej linii */
-    justify-content: space-around; /* Rozłożenie elementów na osi poziomej */
-  }
-
-  .dogAdoptionForm {
-    width: 80%; /* Ustaw szerokość formularza na 80% dla mniejszych ekranów */
+    flex-direction: column;
+    align-items: center;
   }
 
   .asideDogAdoptForm-content {
-    font-size: 1.5rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+    width: 90%;
+    margin: 0.5rem 0;
+    font-size: 14px;
     padding: 0.5rem;
+  }
+
+  .dogAdoptionForm {
+    width: 100%;
   }
 }
 
 @media (max-width: 576px) {
   .dogAdoptFormHeader {
-    font-size: 1.8rem; /* Dostosuj czcionkę dla mniejszych ekranów */
-  }
-
-  .asideDogAdoptForm {
-    width: 80%; /* Dostosuj szerokość aside dla bardzo małych ekranów */
-    flex-direction: column; /* Ustawianie kontenera na układ kolumnowy dla bardzo małych ekranów */
-    height: auto;
-  }
-
-  .dogAdoptionForm {
-    width: 80%; /* Ustaw szerokość formularza na 80% dla bardzo małych ekranów */
+    font-size: 20px;
   }
 
   .asideDogAdoptForm-content {
-    font-size: 1.3rem; /* Dostosuj czcionkę dla bardzo małych ekranów */
-    padding: 0.5rem;
+    font-size: 12px;
+  }
+
+  .asideDogAdoptForm-content:hover {
+    font-size: 14px;
+  }
+
+  .dogAdoptionForm {
+    width: 100%;
   }
 }
