--- a/src/js/pages/_dogCalendar.scss
+++ b/src/js/pages/_dogCalendar.scss
@@ -13,12 +13,16 @@
   width: 100%;
   height: 5rem;
   display: flex;
-  justify-content: center;
+  justify-content: space-between; /* Zmiana na space-between */
   border-radius: 5px;
-  font-size: 3rem; /* Użyj jednostek elastycznych dla czcionki */
+  font-size: 3rem;
   opacity: 1;
   color: black;
   align-items: center;
+
+  padding: 0 2rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
 }
 
 .dogCalendarHeader:focus {
@@ -38,16 +42,18 @@
 
 .asideDogCalendar-content {
 
+  font-size: 16px;
   padding: 1rem;
-  transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
-  justify-content: space-between;
-  flex: 1 1 auto;
+
   text-align: center;
-  margin: 0.5rem;
+  margin: 0.5rem 0;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
 }
 
 .asideDogCalendar-content:hover {
-  background-color: red;
+  background-color: #ff6666;
 }
 
 .dogCalendar {
@@ -142,4 +148,7 @@
   .asideDogCalendar-content:hover {
     font-size: 2rem; /* Dostosuj czcionkę dla mniejszych ekranów */
   }
+}
+.dogCalendarButton {
+  background-color: #ff6666;
 }
