--- a/src/js/pages/_reservedDogs.scss
+++ b/src/js/pages/_reservedDogs.scss
@@ -9,7 +9,7 @@
 }
 
 .reservedDogsHeader {
-  z-index: 99999;
+  z-index: 99;
   width: 100%;
   height: 5rem;
   border-radius: 5px;
@@ -17,8 +17,11 @@
   opacity: 1;
   color: black;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+
+  padding: 0 2rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .asideReservedDogs {
@@ -35,16 +38,24 @@
 .asideReservedDogs-content {
   font-size: 16px;
   padding: 1rem;
-  transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
-  justify-content: space-between;
-  flex: 1 1 auto;
+
   text-align: center;
-  margin: 0.5rem;
+  margin: 0.5rem 0;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
 }
 
 .asideReservedDogs-content:hover {
 
-  background-color: red;
+  background-color: #ff6666;
+}
+.reservedDogsButtonCancel {
+  background-color: #ff6666;
+}
+
+.reservedDogsButtonEdit {
+
 }
 
 .reservedDogs {
