--- a/src/js/pages/_userPanel.scss
+++ b/src/js/pages/_userPanel.scss
@@ -12,7 +12,7 @@
 }
 
 .userPanelHeader {
-  z-index: 9999999;
+  z-index: 99;
   width: 100%;
   height: 5rem;
   border-radius: 5px;
@@ -20,8 +20,11 @@
   opacity: 1;
   color: black;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+
+  padding: 0 2rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .userPanelHeader:focus {
@@ -38,15 +41,19 @@
   justify-content: space-between;
   align-self: flex-start; /* Elementy .userNameAside są wyświetlane z lewej strony */
 }
+.userPanelButton {
+  background-color: #ff6666;
+}
 
 .userNameAside-content {
   font-size: 16px;
   padding: 1rem;
-  transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
-  justify-content: space-between;
-  flex: 1 1 auto;
+
   text-align: center;
-  margin: 0.5rem;
+  margin: 0.5rem 0;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
 }
 
 .userNameAside-content:hover {
