--- a/src/js/pages/_dogAdoptForm.scss
+++ b/src/js/pages/_dogAdoptForm.scss
@@ -1,6 +1,4 @@
-* {
-  font-family: cursive;
-}
+/* _dogAdoptForm.scss */
 
 .container-main-dogAdoptForm {
   max-width: 100%;
@@ -19,7 +17,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   padding: 0 2rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -44,7 +41,7 @@
 
 .asideDogAdoptForm {
   width: 20%;
-  max-width: 20vh; /* Maksymalna szerokość */
+  max-width: 20vh;
   color: black;
   display: flex;
   flex-direction: column;
@@ -55,7 +52,6 @@
 .asideDogAdoptForm-content {
   font-size: 16px;
   padding: 1rem;
-
   text-align: center;
   margin: 0.5rem 0;
   border-radius: 5px;
@@ -89,10 +85,12 @@
 .dogAdoptionFormInput {
   display: flex;
   flex-direction: column;
+
 }
 
 .dogAdoptionFormInput label {
   margin-top: 0.5rem;
+
 }
 
 .dogAdoptionFormInput input {
@@ -110,8 +108,6 @@ button {
   font-size: 1.2rem;
   margin-top: 1rem;
 }
-
-
 
 .error {
   color: red;
@@ -188,4 +184,9 @@ button {
   .dogAdoptionForm {
     width: 100%;
   }
+}
+.dogAdoptionFormOwnerInput {
+  padding: 0.5rem;
+  width: 60%;
+  margin: 0.4rem;
 }
