--- a/src/js/pages/_loginPage.scss
+++ b/src/js/pages/_loginPage.scss
@@ -7,49 +7,47 @@
 
 .container-main-loginPage {
   flex-direction: column;
-  min-height: 100vh; /* Sprawia, że kontener zajmuje całą wysokość widoku */
+  min-height: 100vh;
 
   background-image: url("https://www.napo.pet/_next/image?url=https%3A%2F%2Fumbraco.napo.pet%2Fmedia%2Fcarj2bm4%2Fdog-cutout-labrador-confetticrown.png&w=3840&q=90&dpl=dpl_DiWWnXGRnzGteuK5GXh6Qzvge1ha");
   background-size: cover;
 
 }
 
-.loginPage {
-
-
-}
 
 .login-form {
   width: 100%;
-  max-width: 30rem; /* Maksymalna szerokość formularza */
+  max-width: 30rem;
   color: black;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: rgba(255, 255, 255, 0.7); /* Przezroczyste tło formularza */
+  background-color: rgba(255, 255, 255, 0.7);
   padding: 2rem;
   border-radius: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Cień dla efektu głębi */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .login-form h1 {
-  font-size: 2rem; /* Zmniejszenie rozmiaru nagłówka na mniejszych urządzeniach */
+
+  font-size: 2rem;
   text-align: center;
 }
 
 .input-box {
-  margin: 1.5rem 0; /* Mniejszy margines między polami wejściowymi */
+  margin: 1.5rem 0;
+  width: 100%;
 }
 
 .input-box input {
   width: 100%;
-  height: 3rem; /* Mniejsza wysokość pola wejściowego */
+  height: 3rem;
   border: none;
   border-radius: 20px;
-  font-size: 1rem; /* Mniejsza czcionka dla lepszego dopasowania do mniejszych ekranów */
+  font-size: 1rem;
   padding: 1rem;
-  background-color:     #a4a3a3; /* Przezroczyste tło pola wejściowego */
+  background-color: #a4a3a3;
 }
 
 .login-btn {
@@ -61,17 +59,17 @@
   color: black;
   padding: 1rem;
   background-color: rgba(255, 255, 255, 0.8);
-  cursor: pointer; /* Kursor zmienia się na wskaźnik na przycisku */
+  cursor: pointer;
   text-align: center;
 }
 
 .remember-forgot {
   display: flex;
-  justify-content: space-between; /* Równomierne rozłożenie elementów */
+  justify-content: space-between;
 }
 
 .login-btn:hover {
-  background-color:    #a4a3a3; /* Przejście do ciemniejszego tła po najechaniu kursorem */
+  background-color:    #a4a3a3;
 }
 
 a {
@@ -83,5 +81,5 @@ a {
 .error {
   display: flex;
   justify-content: center;
-  color: red; /* Kolor czerwony dla komunikatów o błędach */
+  color: red;
 }
