--- a/src/js/pages/_calculator.scss
+++ b/src/js/pages/_calculator.scss
@@ -111,7 +111,7 @@
   margin-top: 1rem;
 }
 
-/* Media Queries for responsiveness */
+
 @media (max-width: 1200px) {
   .calculatorHeader {
     font-size: 32px;
@@ -182,7 +182,7 @@
 
 .calculatorInput {
   margin: 1rem 0;
-  display: none; /* Ukryj domyślne checkboxy */
+  display: none;
 }
 
 .checkbox-wrapper {
@@ -192,7 +192,7 @@
 }
 
 .checkbox-wrapper input {
-  opacity: 0; /* Ukryj domyślny checkbox */
+  opacity: 0;
 }
 
 .checkbox-custom {
@@ -224,7 +224,7 @@
 }
 
 .calculatorSelect {
-  width: calc(100% - 2rem); /* Zmień szerokość, aby uwzględnić przyciski */
+  width: calc(100% - 2rem);
   padding: 0.75rem;
   margin: 1rem 0;
   border: 1px solid #ccc;
@@ -238,8 +238,8 @@
 .card {
   margin-top: 2rem;
   width: 100%;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Dodaj cień */
-  border-radius: 10px; /* Zaokrąglij rogi */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
 }
 
 .card-body {
