--- a/src/js/pages/_dogCalendar.scss
+++ b/src/js/pages/_dogCalendar.scss
@@ -13,7 +13,7 @@
   width: 100%;
   height: 5rem;
   display: flex;
-  justify-content: space-between; /* Zmiana na space-between */
+  justify-content: space-between;
   border-radius: 5px;
   font-size: 3rem;
   opacity: 1;
@@ -30,14 +30,14 @@
 }
 
 .asideDogCalendar {
-  width: 20%; /* Użyj procentowej szerokości dla aside */
-  max-width: 20vh; /* Ustaw maksymalną szerokość */
+  width: 20%;
+  max-width: 20vh;
 
   color: black;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-self: flex-start; /* Elementy .asideDogCalendar są wyświetlane z lewej strony */
+  align-self: flex-start;
 }
 
 .asideDogCalendar-content {
@@ -57,7 +57,7 @@
 }
 
 .dogCalendar {
-  width: 80%; /* Użyj procentowej szerokości dla kalendarza */
+  width: 80%;
   margin: 0.5rem;
   display: flex;
   flex-direction: column;
@@ -96,7 +96,7 @@
 
 @media screen and (max-width: 992px) {
   .dogCalendarHeader {
-    font-size: 2.5rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+    font-size: 2.5rem;
   }
 
   .asideDogCalendar {
@@ -105,21 +105,21 @@
   }
 
   .asideDogCalendar-content {
-    font-size: 2rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+    font-size: 2rem;
   }
 
   .asideDogCalendar-content:hover {
-    font-size: 2.5rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+    font-size: 2.5rem;
   }
 }
 
 @media screen and (max-width: 768px) {
   .dogCalendarHeader {
-    font-size: 2.5rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+    font-size: 2.5rem;
   }
 
   .asideDogCalendar {
-    width: 100%; /* Dostosuj szerokość aside dla mniejszych ekranów */
+    width: 100%;
     height: auto;
     flex-direction: column;
     align-items: center;
@@ -128,7 +128,7 @@
   .asideDogCalendar-content {
     width: 90%;
     margin: 0.5rem 0;
-    font-size: 2rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+    font-size: 2rem;
   }
 
   .dogCalendar {
@@ -138,15 +138,15 @@
 
 @media screen and (max-width: 576px) {
   .dogCalendarHeader {
-    font-size: 2rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+    font-size: 2rem;
   }
 
   .asideDogCalendar-content {
-    font-size: 1.5rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+    font-size: 1.5rem;
   }
 
   .asideDogCalendar-content:hover {
-    font-size: 2rem; /* Dostosuj czcionkę dla mniejszych ekranów */
+    font-size: 2rem;
   }
 }
 .dogCalendarButton {
