--- a/src/js/pages/_dogCalendar.scss
+++ b/src/js/pages/_dogCalendar.scss
@@ -57,10 +57,15 @@
 }
 
 .dogCalendar {
-  width: 80%;
-  margin: 0.5rem;
+  margin: 1rem;
+  width: 87%;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+  padding: 2rem;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .dogCalendarDate {
