--- a/src/js/pages/_dogAdoptForm.scss
+++ b/src/js/pages/_dogAdoptForm.scss
@@ -63,11 +63,17 @@
   background-color: lightcoral;
 }
 
+
 .dogAdoptionForm {
   margin: 1rem;
-  width: 70%;
-  display: flex;
-  flex-direction: column;
+  width: 87%;
+
+
+  align-items: center;
+  background-color: #fff;
+  padding: 2rem;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .dogAdoptionFormSelect,
