--- a/src/js/pages/_dogCv.scss
+++ b/src/js/pages/_dogCv.scss
@@ -43,6 +43,14 @@
   justify-content: space-between;
   align-self: flex-start;
 }
+.dogCvAside {
+  width: 40%;
+
+
+  display: flex;
+  flex-direction: column;
+}
+
 
 .aside-content {
   font-size: 16px;
@@ -58,25 +66,24 @@
 
   background-color: lightcoral;
 }
+
 .dogCvButton {
   background-color: #ff6666;
   margin: 1rem;
 }
 .dogCv {
-  margin: 3rem;
-  width: 70%;
+  margin: 1rem;
+  width: 87%;
   display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+
+  align-items: center;
+  background-color: #fff;
+  padding: 2rem;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.dogCvAside {
-  width: 40%;
 
-
-  display: flex;
-  flex-direction: column;
-}
 
 .dogCvMainContentHeader {
   width: 100%;
