--- a/src/js/pages/_reservedDogs.scss
+++ b/src/js/pages/_reservedDogs.scss
@@ -50,17 +50,25 @@
 
   background-color: #ff6666;
 }
+
 .reservedDogsButtonCancel {
   background-color: #ff6666;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.reservedDogsButtonEdit {
 
-}
+
 
 .reservedDogs {
   margin: 1rem;
-  width: 80%;
+  width: 87%;
+  background-color: #fff;
+  padding: 2rem;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .reservedDogsList {
@@ -69,11 +77,13 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  align-items: center;
 }
 
 .resevedDogsButtons {
   display: flex;
   justify-content: center;
+
 }
 
 
